--- a/google-homepage/style.css
+++ b/google-homepage/style.css
@@ -1,6 +1,7 @@
 body {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, sans-serif;
     color: darkslategrey;
+    margin-left: 20px;
 }
 
 ul {
@@ -15,8 +16,9 @@ li {
     width: 50px;
     font-size: 12px;
 }
+
 .center {
-    padding-top: 5px;
+    padding-top: 10px;
 }
 
 .move-right {
@@ -53,6 +55,12 @@ button {
     margin: 5px;
     height: 40px;
     width: 150px;
+    transition-duration: 0.4s;
+}
+
+button:hover {
+
+    border: 1px solid grey;
 }
 
 footer {
@@ -68,6 +76,13 @@ footer ul li {
 }
 
 #bell {
-    padding-top: 0;
-    margin-top: 10px;
+    margin-top: 5px;
+    width: 40px;
+}
+
+#apps {
+    margin-top: 7px;
+    margin-left: 20px;
+    margin-right: 0;
+    width: 40px;
 }
