game works as desired, if desired add reset button after game is over

--- a/rockPaperScissorsUI/style.css
+++ b/rockPaperScissorsUI/style.css
@@ -4,11 +4,24 @@
 }
 
 .btn {
-    margin: 30px;
-    
+    margin: 20px auto; 
+}
+
+#btn-wrapper {
+    margin: 0 auto;
+    width: 50%;
 }
 
 p {
     margin: 0;
     text-align: center;
+}
+
+h2 {
+    text-align: center;
+}
+
+#win-message {
+    margin-top: 20px;
+    font-size: 2em;
 }
