--- a/etch-A-sketch/style.css
+++ b/etch-A-sketch/style.css
@@ -1,8 +1,16 @@
-
+#container {
+    margin: 0 auto;
+    width: 50%;
+}
 .gridCell {
     display: inline-block;
     background-color: blue;
-    width: 40px;
-    height: 40px;
-    margin: 1px 1px;
+    width: 30px;
+    height: 30px;
+    margin: 0 1px;
+}
+
+button {
+    display: block;
+    margin: 15px auto;
 }
