OdinWebDev - added htmlExamples dir for storing simple skeleton pages - center divs etc

--- a/etch-A-sketch/style.css
+++ b/etch-A-sketch/style.css
@@ -1,7 +1,14 @@
 #container {
     margin: 0 auto;
     width: 50%;
+    background-color: grey;
 }
+
+#gridContainer {
+    background-color: green;
+    padding-left: 75px;
+}
+
 .gridCell {
     display: inline-block;
     background-color: blue;
