--- a/etch-A-sketch/style.css
+++ b/etch-A-sketch/style.css
@@ -1,12 +1,17 @@
+html, body {
+    height: 100%;
+    width: 100%;
+}
 
 #container {
     /* center Horiz */
     height: 80%;
+    max-width: 713px;
     width: 80%;
     margin: 0 auto;
     /* center vert */
     position: relative;
-    top: 10%;
+    top: 1%;
     
     background-color: grey;
 }
@@ -25,8 +30,8 @@
 
 .divRow {
     width: 80%;
+    height: 28px;
     margin: 0 auto;
-    padding: 0;
 }
 
 .gridCell {
@@ -35,6 +40,7 @@
     width: 28px;
     height: 28px;
     margin: 0 auto;
+    
 }
 
 button {
