--- a/etch-A-sketch/style.css
+++ b/etch-A-sketch/style.css
@@ -8,6 +8,7 @@ html, body {
     /* center Horiz */
     height: 80%;
     max-width: 713px;
+    min-width: 550px;
     width: 80%;
     min-height: 570px;
     margin: 0 auto;
@@ -33,18 +34,13 @@ html, body {
 }
 
 .gridRow {
-    /* width: 80%;
-    height: 28px; */
-    margin: 0 auto;
+    margin: 0 10px;
 }
 
 .gridCell {
     display: inline-block;
     background-color: white;
-    /* width: 28px;
-    height: 28px; */
     margin: 0 auto;
-    
 }
 
 button {
